5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4016/executions/1590_2895.log
== SUBMITION (2019-03-25 14:33:17) 
-- CODE:
valor = input("jogos")
quantidade = input("instruções:")
frete = input("frete")

total =float("valor")*float("quantidade")+("frete")
-- EXECUTION TIME:
0.148974
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1590/2895/main.py", line 5, in <module>
    total =float("valor")*float("quantidade")+("frete")
ValueError: could not convert string to float: 'valor'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 14:33:18) 
-- CODE:
valor = input("jogos")
quantidade = input("instruções:")
frete = input("frete")

total =float("valor")*float("quantidade")+("frete")
-- EXECUTION TIME:
0.187007
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1590/2895/main.py", line 2, in <module>
    quantidade = input("instru\xe7\xf5es:")
UnicodeEncodeError: 'ascii' codec can't encode characters in position 6-7: ordinal not in range(128)

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 14:33:19) 
-- CODE:
valor = input("jogos")
quantidade = input("instruções:")
frete = input("frete")

total =float("valor")*float("quantidade")+("frete")
-- EXECUTION TIME:
0.133424
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1590/2895/main.py", line 5, in <module>
    total =float("valor")*float("quantidade")+("frete")
ValueError: could not convert string to float: 'valor'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 14:33:49) 
-- CODE:
valor = input("jogos")
quantidade = input("instruções:")
frete = input("frete")

total =float("valor")*float("quantidade")+("frete")

total=
-- EXECUTION TIME:
0.18359
-- ERROR:
  File "/home/codebench/codes/1590/2895/main.py", line 7
    total=
         ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 14:33:51) 
-- CODE:
valor = input("jogos")
quantidade = input("instruções:")
frete = input("frete")

total =float("valor")*float("quantidade")+("frete")

total=
-- EXECUTION TIME:
0.259068
-- ERROR:
  File "/home/codebench/codes/1590/2895/main.py", line 7
    total=
         ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 14:33:51) 
-- CODE:
valor = input("jogos")
quantidade = input("instruções:")
frete = input("frete")

total =float("valor")*float("quantidade")+("frete")

total=
-- EXECUTION TIME:
0.186922
-- ERROR:
  File "/home/codebench/codes/1590/2895/main.py", line 7
    total=
         ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 14:33:51) 
-- CODE:
valor = input("jogos")
quantidade = input("instruções:")
frete = input("frete")

total =float("valor")*float("quantidade")+("frete")

total=
-- EXECUTION TIME:
0.202647
-- ERROR:
  File "/home/codebench/codes/1590/2895/main.py", line 7
    total=
         ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 14:33:55) 
-- CODE:
valor = input("jogos")
quantidade = input("instruções:")
frete = input("frete")

total =float("valor")*float("quantidade")+("frete")

total= valor
-- EXECUTION TIME:
0.208244
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1590/2895/main.py", line 5, in <module>
    total =float("valor")*float("quantidade")+("frete")
ValueError: could not convert string to float: 'valor'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 14:33:56) 
-- CODE:
valor = input("jogos")
quantidade = input("instruções:")
frete = input("frete")

total =float("valor")*float("quantidade")+("frete")

total= valor
-- EXECUTION TIME:
0.155019
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1590/2895/main.py", line 5, in <module>
    total =float("valor")*float("quantidade")+("frete")
ValueError: could not convert string to float: 'valor'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 14:33:57) 
-- CODE:
valor = input("jogos")
quantidade = input("instruções:")
frete = input("frete")

total =float("valor")*float("quantidade")+("frete")

total= valor
-- EXECUTION TIME:
0.245949
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1590/2895/main.py", line 5, in <module>
    total =float("valor")*float("quantidade")+("frete")
ValueError: could not convert string to float: 'valor'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 14:33:57) 
-- CODE:
valor = input("jogos")
quantidade = input("instruções:")
frete = input("frete")

total =float("valor")*float("quantidade")+("frete")

total= valor
-- EXECUTION TIME:
0.116029
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1590/2895/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 14:33:57) 
-- CODE:
valor = input("jogos")
quantidade = input("instruções:")
frete = input("frete")

total =float("valor")*float("quantidade")+("frete")

total= valor
-- EXECUTION TIME:
0.273842
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1590/2895/main.py", line 5, in <module>
    total =float("valor")*float("quantidade")+("frete")
ValueError: could not convert string to float: 'valor'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 14:35:00) 
-- CODE:
valor = input("jogos")
quantidade = input("instruções:")
frete = input("frete")

total =float("valor")*float("quantidade")+("frete")

total = valor
-- EXECUTION TIME:
0.218653
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1590/2895/main.py", line 5, in <module>
    total =float("valor")*float("quantidade")+("frete")
ValueError: could not convert string to float: 'valor'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 14:35:01) 
-- CODE:
valor = input("jogos")
quantidade = input("instruções:")
frete = input("frete")

total =float("valor")*float("quantidade")+("frete")

total = valor
-- EXECUTION TIME:
0.258563
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1590/2895/main.py", line 5, in <module>
    total =float("valor")*float("quantidade")+("frete")
ValueError: could not convert string to float: 'valor'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 14:35:01) 
-- CODE:
valor = input("jogos")
quantidade = input("instruções:")
frete = input("frete")

total =float("valor")*float("quantidade")+("frete")

total = valor
-- EXECUTION TIME:
0.197662
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1590/2895/main.py", line 5, in <module>
    total =float("valor")*float("quantidade")+("frete")
ValueError: could not convert string to float: 'valor'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 14:35:02) 
-- CODE:
valor = input("jogos")
quantidade = input("instruções:")
frete = input("frete")

total =float("valor")*float("quantidade")+("frete")

total = valor
-- EXECUTION TIME:
0.174034
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1590/2895/main.py", line 5, in <module>
    total =float("valor")*float("quantidade")+("frete")
ValueError: could not convert string to float: 'valor'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 14:35:02) 
-- CODE:
valor = input("jogos")
quantidade = input("instruções:")
frete = input("frete")

total =float("valor")*float("quantidade")+("frete")

total = valor
-- EXECUTION TIME:
0.392162
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1590/2895/main.py", line 5, in <module>
    total =float("valor")*float("quantidade")+("frete")
ValueError: could not convert string to float: 'valor'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 14:35:02) 
-- CODE:
valor = input("jogos")
quantidade = input("instruções:")
frete = input("frete")

total =float("valor")*float("quantidade")+("frete")

total = valor
-- EXECUTION TIME:
0.493226
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1590/2895/main.py", line 5, in <module>
    total =float("valor")*float("quantidade")+("frete")
ValueError: could not convert string to float: 'valor'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 14:35:03) 
-- CODE:
valor = input("jogos")
quantidade = input("instruções:")
frete = input("frete")

total =float("valor")*float("quantidade")+("frete")

total = valor
-- EXECUTION TIME:
0.480317
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1590/2895/main.py", line 5, in <module>
    total =float("valor")*float("quantidade")+("frete")
ValueError: could not convert string to float: 'valor'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 14:35:03) 
-- CODE:
valor = input("jogos")
quantidade = input("instruções:")
frete = input("frete")

total =float("valor")*float("quantidade")+("frete")

total = valor
-- EXECUTION TIME:
0.403974
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1590/2895/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 14:35:03) 
-- CODE:
valor = input("jogos")
quantidade = input("instruções:")
frete = input("frete")

total =float("valor")*float("quantidade")+("frete")

total = valor
-- EXECUTION TIME:
0.504838
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1590/2895/main.py", line 5, in <module>
    total =float("valor")*float("quantidade")+("frete")
ValueError: could not convert string to float: 'valor'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 14:35:03) 
-- CODE:
valor = input("jogos")
quantidade = input("instruções:")
frete = input("frete")

total =float("valor")*float("quantidade")+("frete")

total = valor
-- EXECUTION TIME:
0.437976
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1590/2895/main.py", line 5, in <module>
    total =float("valor")*float("quantidade")+("frete")
ValueError: could not convert string to float: 'valor'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 14:37:18) 
-- CODE:
valor = input("jogos")
quantidade = input("instruções:")
frete = input("frete")

total =float("valor")*float("quantidade")+float("frete")

print(total)
-- EXECUTION TIME:
0.126129
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1590/2895/main.py", line 2, in <module>
    quantidade = input("instru\xe7\xf5es:")
UnicodeEncodeError: 'ascii' codec can't encode characters in position 6-7: ordinal not in range(128)

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 14:37:22) 
-- CODE:
valor = input("jogos")
quantidade = input("instruções:")
frete = input("frete")

total =float("valor")*float("quantidade")+float("frete")

print(total)
-- EXECUTION TIME:
0.309577
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1590/2895/main.py", line 5, in <module>
    total =float("valor")*float("quantidade")+float("frete")
ValueError: could not convert string to float: 'valor'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 14:37:22) 
-- CODE:
valor = input("jogos")
quantidade = input("instruções:")
frete = input("frete")

total =float("valor")*float("quantidade")+float("frete")

print(total)
-- EXECUTION TIME:
0.195296
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1590/2895/main.py", line 5, in <module>
    total =float("valor")*float("quantidade")+float("frete")
ValueError: could not convert string to float: 'valor'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 14:37:22) 
-- CODE:
valor = input("jogos")
quantidade = input("instruções:")
frete = input("frete")

total =float("valor")*float("quantidade")+float("frete")

print(total)
-- EXECUTION TIME:
0.149136
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1590/2895/main.py", line 5, in <module>
    total =float("valor")*float("quantidade")+float("frete")
ValueError: could not convert string to float: 'valor'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 14:37:22) 
-- CODE:
valor = input("jogos")
quantidade = input("instruções:")
frete = input("frete")

total =float("valor")*float("quantidade")+float("frete")

print(total)
-- EXECUTION TIME:
0.440601
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1590/2895/main.py", line 5, in <module>
    total =float("valor")*float("quantidade")+float("frete")
ValueError: could not convert string to float: 'valor'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 14:37:22) 
-- CODE:
valor = input("jogos")
quantidade = input("instruções:")
frete = input("frete")

total =float("valor")*float("quantidade")+float("frete")

print(total)
-- EXECUTION TIME:
0.315695
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1590/2895/main.py", line 5, in <module>
    total =float("valor")*float("quantidade")+float("frete")
ValueError: could not convert string to float: 'valor'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 14:37:24) 
-- CODE:
valor = input("jogos")
quantidade = input("instruções:")
frete = input("frete")

total =float("valor")*float("quantidade")+float("frete")

print(total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    total =float("valor")*float("quantidade")+float("frete")
ValueError: could not convert string to float: 'valor'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 14:37:26) 
-- CODE:
valor = input("jogos")
quantidade = input("instruções:")
frete = input("frete")

total =float("valor")*float("quantidade")+float("frete")

print(total)
-- EXECUTION TIME:
0.166862
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1590/2895/main.py", line 5, in <module>
    total =float("valor")*float("quantidade")+float("frete")
ValueError: could not convert string to float: 'valor'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 14:37:34) 
-- CODE:
valor = input("jogos")
quantidade = input("instruções:")
frete = input("frete")

total =float("valor")*float("quantidade")+float("frete")

print("total")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    total =float("valor")*float("quantidade")+float("frete")
ValueError: could not convert string to float: 'valor'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 14:37:34) 
-- CODE:
valor = input("jogos")
quantidade = input("instruções:")
frete = input("frete")

total =float("valor")*float("quantidade")+float("frete")

print("total")
-- EXECUTION TIME:
0.126523
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1590/2895/main.py", line 5, in <module>
    total =float("valor")*float("quantidade")+float("frete")
ValueError: could not convert string to float: 'valor'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 14:37:37) 
-- CODE:
valor = input("jogos")
quantidade = input("instruções:")
frete = input("frete")

total =float("valor")*float("quantidade")+float("frete")

print("total")
-- EXECUTION TIME:
0.180603
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1590/2895/main.py", line 5, in <module>
    total =float("valor")*float("quantidade")+float("frete")
ValueError: could not convert string to float: 'valor'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 14:37:38) 
-- CODE:
valor = input("jogos")
quantidade = input("instruções:")
frete = input("frete")

total =float("valor")*float("quantidade")+float("frete")

print("total")
-- EXECUTION TIME:
0.181984
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1590/2895/main.py", line 5, in <module>
    total =float("valor")*float("quantidade")+float("frete")
ValueError: could not convert string to float: 'valor'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 14:37:38) 
-- CODE:
valor = input("jogos")
quantidade = input("instruções:")
frete = input("frete")

total =float("valor")*float("quantidade")+float("frete")

print("total")
-- EXECUTION TIME:
0.121983
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1590/2895/main.py", line 5, in <module>
    total =float("valor")*float("quantidade")+float("frete")
ValueError: could not convert string to float: 'valor'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 14:37:38) 
-- CODE:
valor = input("jogos")
quantidade = input("instruções:")
frete = input("frete")

total =float("valor")*float("quantidade")+float("frete")

print("total")
-- EXECUTION TIME:
0.183061
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1590/2895/main.py", line 5, in <module>
    total =float("valor")*float("quantidade")+float("frete")
ValueError: could not convert string to float: 'valor'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 14:37:39) 
-- CODE:
valor = input("jogos")
quantidade = input("instruções:")
frete = input("frete")

total =float("valor")*float("quantidade")+float("frete")

print("total")
-- EXECUTION TIME:
0.187143
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1590/2895/main.py", line 5, in <module>
    total =float("valor")*float("quantidade")+float("frete")
ValueError: could not convert string to float: 'valor'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 14:37:39) 
-- CODE:
valor = input("jogos")
quantidade = input("instruções:")
frete = input("frete")

total =float("valor")*float("quantidade")+float("frete")

print("total")
-- EXECUTION TIME:
0.187698
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1590/2895/main.py", line 5, in <module>
    total =float("valor")*float("quantidade")+float("frete")
ValueError: could not convert string to float: 'valor'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 14:37:39) 
-- CODE:
valor = input("jogos")
quantidade = input("instruções:")
frete = input("frete")

total =float("valor")*float("quantidade")+float("frete")

print("total")
-- EXECUTION TIME:
0.315636
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1590/2895/main.py", line 5, in <module>
    total =float("valor")*float("quantidade")+float("frete")
ValueError: could not convert string to float: 'valor'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 14:37:55) 
-- CODE:
valor = input("jogos")
quantidade = input("instruções:")
frete = input("frete")

total =float("valor")*float("quantidade")+float("frete")

print(total)
-- EXECUTION TIME:
0.180141
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1590/2895/main.py", line 5, in <module>
    total =float("valor")*float("quantidade")+float("frete")
ValueError: could not convert string to float: 'valor'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 14:37:57) 
-- CODE:
valor = input("jogos")
quantidade = input("instruções:")
frete = input("frete")

total =float("valor")*float("quantidade")+float("frete")

print(total)
-- EXECUTION TIME:
0.12076
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1590/2895/main.py", line 5, in <module>
    total =float("valor")*float("quantidade")+float("frete")
ValueError: could not convert string to float: 'valor'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 14:37:58) 
-- CODE:
valor = input("jogos")
quantidade = input("instruções:")
frete = input("frete")

total =float("valor")*float("quantidade")+float("frete")

print(total)
-- EXECUTION TIME:
0.132933
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1590/2895/main.py", line 5, in <module>
    total =float("valor")*float("quantidade")+float("frete")
ValueError: could not convert string to float: 'valor'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 14:37:58) 
-- CODE:
valor = input("jogos")
quantidade = input("instruções:")
frete = input("frete")

total =float("valor")*float("quantidade")+float("frete")

print(total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    total =float("valor")*float("quantidade")+float("frete")
ValueError: could not convert string to float: 'valor'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 14:37:58) 
-- CODE:
valor = input("jogos")
quantidade = input("instruções:")
frete = input("frete")

total =float("valor")*float("quantidade")+float("frete")

print(total)
-- EXECUTION TIME:
0.165177
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1590/2895/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 14:37:58) 
-- CODE:
valor = input("jogos")
quantidade = input("instruções:")
frete = input("frete")

total =float("valor")*float("quantidade")+float("frete")

print(total)
-- EXECUTION TIME:
0.179248
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1590/2895/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 14:37:59) 
-- CODE:
valor = input("jogos")
quantidade = input("instruções:")
frete = input("frete")

total =float("valor")*float("quantidade")+float("frete")

print(total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    total =float("valor")*float("quantidade")+float("frete")
ValueError: could not convert string to float: 'valor'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 14:38:41) 
-- CODE:
valor = input("jogos:")
quantidade = input("instruções:")
frete = input("frete:")

total =float("valor")*float("quantidade")+float("frete")

print(total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    total =float("valor")*float("quantidade")+float("frete")
ValueError: could not convert string to float: 'valor'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 14:38:45) 
-- CODE:
valor = input("jogos:")
quantidade = input("instruções:")
frete = input("frete:")

total = float("valor")*float("quantidade")+float("frete")

print(total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    total = float("valor")*float("quantidade")+float("frete")
ValueError: could not convert string to float: 'valor'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 14:39:02) 
-- CODE:
valor = input("jogos:")
quantidade = input("instruções:")
frete = input("frete:")

total = float("valor")*float("quantidade")+float("frete")

print(total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    total = float("valor")*float("quantidade")+float("frete")
ValueError: could not convert string to float: 'valor'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 14:39:05) 
-- CODE:
valor = input("jogos:")
quantidade = input("instruções:")
frete = input("frete:")

total = float("valor")*float("quantidade")+float("frete")

print(total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    total = float("valor")*float("quantidade")+float("frete")
ValueError: could not convert string to float: 'valor'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 14:39:35) 
-- CODE:
valor = input("jogos:")
quantidade = input("instruções:")
frete = input("frete:")

total = float(valor)*float(quantidade)+float(frete)

print(total)
-- OUTPUT:
618.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 14:39:48) 
-- CODE:
valor = input("jogos:")
quantidade = input("instruções:")
frete = input("frete:")

total = float(valor)*float(quantidade)+float(frete)

print(total)
-- OUTPUT:
618.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 14:40:03) 
-- CODE:
valor = input("jogos:")
quantidade = input("quantidade:")
frete = input("frete:")

total = float(valor)*float(quantidade)+float(frete)

print(total)
-- OUTPUT:
618.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 14:40:20) 
-- CODE:
valor = input("jogos:")
quantidade = input("quantidade:")
frete = input("frete:")

total = float(valor)*float(quantidade)+float(frete)

print(total)
-- EXECUTION TIME:
0.13632
-- TEST CASE 1:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:
618.0
-- TEST CASE 2:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:
765.0
-- TEST CASE 3:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:
240171.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
